appId: dev.expo.updatese2e
onFlowStart:
  - runFlow:
      file: beforeEach.yml
---
# Check that state is correct on a dev client build with updates enabled
- launchApp
- runFlow:
    when:
      platform: iOS
    commands:
      - tapOn:
          label: Tap on "Enter URL manually"
          text: Enter URL manually
      - tapOn:
          label: Tap on "Updates URL" text field
          text: '.*http:.*'
          below: Enter URL manually
- runFlow:
    when:
      platform: android
    commands:
      - tapOn:
          label: Tap on "New development server"
          text: New development server
          optional: true
      - tapOn:
          label: Tap on "Updates URL" text field
          text: '.*http:.*'
- inputText:
    label: Input local update server URL
    text: "http://localhost:8081\n"
- hideKeyboard
- tapOn:
    label: Tap on "Connect" button
    text: Connect
    optional: true
- tapOn:
    label: Tap on "Connect" button
    text: Connect
    optional: true
- tapOn:
    label: Tap on "Continue" to clear onboarding menu
    text: Continue
    optional: true
- tapOn:
    label: Tap on reload
    text: Reload
    optional: true
- copyTextFrom:
    label: Copy text from update string
    id: updateString
- assertTrue:
    condition: ${maestro.copiedText == "test"}
    label: Assert update string is from embedded bundle
- copyTextFrom:
    label: Copy text from updateID
    id: updateID
- assertTrue:
    condition: ${maestro.copiedText != ""}
    label: Assert updateID is not empty
- copyTextFrom:
    label: Copy text from isEmbeddedLaunch
    id: isEmbeddedLaunch
- assertTrue:
    condition: ${maestro.copiedText == "false"}
    label: Assert isEmbeddedLaunch is false
- copyTextFrom:
    label: Copy text from availableUpdateID
    id: availableUpdateID
- assertTrue:
    condition: ${maestro.copiedText == "undefined"}
    label: Assert availableUpdateID is undefined
